--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
   <div id="container">
 
+    <canvas data-processing-sources="test.pde"></canvas>
+    <canvas data-processing-sources="test2.pde"></canvas>
     <canvas data-processing-sources="test3.pde"></canvas>
 
   </div> <!--! end of #container -->
